# apply-pilot

./: .gitignore  Makefile  pyproject.toml
src/: job_agent.py  job_list_parser.py  llm_providers.py  main.py  playwright_mcp_client.py  settings.py  utils.py
src/agents/commons/: models.py
src/agents/field_agent/: agent.py  models.py
src/agents/field_agent/nodes/: fill_field.py
src/agents/job_agent/: agent.py  models.py
src/agents/job_agent/nodes/: __init__.py  check_for_apply_button.py  click_on_apply_button.py  extract_fields.py  fill_fields.py  navigate_to_url.py
src/observability/: observe_langfuse.py
